--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h4>PLAYLIST</h4>
                 <div class="playlist-container">
 
-                    <div class="add-ply">
+                    <div class="cnt-flx">
 
                         <div><a href="https/spotify.com"><i class="fa-regular fa-square-plus square-playlist"></i></a>
                         </div>
@@ -71,21 +71,23 @@
                         <li><a href="https/spotify.com">Nome Playlist</a></li>
                         <li><a href="https/spotify.com">Nome Playlist</a></li>
                         <li><a href="https/spotify.com">Nome Playlist</a></li>
-                        
+
 
                     </ul>
                 </div>
 
             </div>
-            <div  class="bottom-section">
-                <div style="padding: 1rem;" class="add-ply">
-                    <div><a href="https/spotify.com"><i class=" square-playlist fa-regular fa-circle-user"></i></a></div>
-                    <div><a href="https/spotify.com">  Installa App</a></div>
+            <div class="bottom-section">
+                <div style="padding: 1rem;" class="cnt-flx">
+                    <div><a href="https/spotify.com"><i class=" square-playlist fa-regular fa-circle-down"></i></a>
+                    </div>
+                    <div class="ghost-side"><a href="https/spotify.com"> Installa App</a></div>
                 </div>
-                <div >_____________________</div>
-                <div style="padding: 1rem;" class="add-ply">
-                    <div><a href="https/spotify.com"><i class=" square-playlist fa-regular fa-circle-user"></i></a></div>
-                    <div><a href="https/spotify.com">  Jhon Doe</a></div>
+                <div style="color: grey;">_____________________</div>
+                <div style="padding: 1rem;" class="cnt-flx">
+                    <div><a href="https/spotify.com"><i class=" square-playlist fa-regular fa-circle-user"></i></a>
+                    </div>
+                    <div class="ghost-side"><a href="https/spotify.com"> Jhon Doe</a></div>
                 </div>
             </div>
         </div>
@@ -100,7 +102,17 @@
     </div>
 
     <div class="bottom-navbar">
-        
+        <div class="cnt-flx">
+            <div>
+                <img class="img1" src="img/sinister.jpeg" alt="sinister">
+            </div>
+            <div class="single-color">
+                Sinister
+
+            </div>
+        </div>
+        <div>d</div>
+        <div>d</div>
     </div>
 
 </body>
