--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     </div>
 
     <div class="bottom-navbar">
-        <div class="cnt-flx">
+        <div class="cnt-flx1">
             <div>
                 <img class="img1" src="img/sinister.jpeg" alt="sinister">
             </div>
-            <div class="single-color">
+            <div class="single-color" style="padding-left: 1rem;">
                 Sinister
-
+                <div style="color: gray;">Rihanna</div>
             </div>
         </div>
         <div>dfsff</div>
