--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li>
                         <a href="https/spotify.com">
                             <div class="list-item-icon">
-                                <i class="fa-solid fa-layer-group"></i>
+                                <i class="fa-solid fa-lines-leaning"></i>
                             </div>
                             <div class="list-item-text">La Tua Libreria</div>
                         </a>
@@ -111,7 +111,35 @@
                 <div style="color: gray;">Rihanna</div>
             </div>
         </div>
-        <div>dfsff</div>
+        <div class="single-color">
+            <div class="cnt-flx">
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist fa-solid fa-shuffle"></i></a>
+                </div>
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist fa-solid fa-backward-step"></i></a>
+
+                </div>
+
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist fa-regular fa-circle-play"></i></a>
+
+                </div>
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist fa-solid fa-forward-step"></i></a>
+
+                </div>
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist fa-solid fa-rotate-left"></i></a>
+                </div>
+            </div>
+            <div class="bar-player">
+                <div class="space-pdg-r">0.25</div>
+                <div class="bar-playerw"></div>
+                <div class="bar-playerg space-pdg"></div>
+                <div class="space-pdg-l">4.35</div>
+            </div>
+        </div>
         <div>dsff</div>
     </div>
 
