--- a/index.html
+++ b/index.html
@@ -114,23 +114,23 @@
         <div class="single-color">
             <div class="cnt-flx">
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
-                            class=" square-playlist fa-solid fa-shuffle"></i></a>
+                            class=" square-playlist1 fa-solid fa-shuffle"></i></a>
                 </div>
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
-                            class=" square-playlist fa-solid fa-backward-step"></i></a>
+                            class=" square-playlist1 fa-solid fa-backward-step"></i></a>
 
                 </div>
 
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
-                            class=" square-playlist fa-regular fa-circle-play"></i></a>
+                            class=" square-playlist1 fa-regular fa-circle-play"></i></a>
 
                 </div>
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
-                            class=" square-playlist fa-solid fa-forward-step"></i></a>
+                            class=" square-playlist1 fa-solid fa-forward-step"></i></a>
 
                 </div>
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
-                            class=" square-playlist fa-solid fa-rotate-left"></i></a>
+                            class=" square-playlist1 fa-solid fa-rotate-left"></i></a>
                 </div>
             </div>
             <div class="bar-player">
@@ -140,8 +140,19 @@
                 <div class="space-pdg-l">4.35</div>
             </div>
         </div>
-        <div>dsff</div>
-    </div>
+        <div>
+            <div class="bar-player">
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist1 fa-solid fa-bars"></i></a>
+                </div>
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist1 fa-solid fa-desktop"></i></a>
+                </div>
+                <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
+                            class=" square-playlist1 fa-solid fa-volume-high"></i></a>
+                </div>
+            </div>
+        </div>
 
 </body>
 
