--- a/index.html
+++ b/index.html
@@ -93,12 +93,24 @@
         </div>
 
         <div class="main-container">
-            <div s>
+            <div>
                 <button class="button-upg">
                     Effettua l'Upgrade
                 </button>
             </div>
+            <div class="bar-cent">
+                <ul class="main-ul">
+                    <li><a href="https:/spotify.com"> IN EVIDENZA</a></li>
+                    <li><a href="https:/spotify.com"> PODCAST</a></li>
+                    <li><a href="https:/spotify.com"> CLASSIFICHE</a></li>
+                    <li><a href="https:/spotify.com"> GENERI E MOOD</a></li>
+                    <li><a href="https:/spotify.com"> NUOVE USCITE</a></li>
+                    <li><a href="https:/spotify.com"> SCOPRI</a></li>
+                   
+                </ul>
+            </div>
         </div>
+
     </div>
 
     <div class="bottom-navbar">
@@ -151,6 +163,10 @@
                 <div class="space-pdg-r-ic"><a href="https/spotify.com"><i
                             class=" square-playlist1 fa-solid fa-volume-high"></i></a>
                 </div>
+
+                <div class="bar-playerw">m</div>
+                <div class="bar-playerg space-pdg">m</div>
+
             </div>
         </div>
 
