--- a/index.html
+++ b/index.html
@@ -106,10 +106,119 @@
                     <li><a href="https:/spotify.com"> GENERI E MOOD</a></li>
                     <li><a href="https:/spotify.com"> NUOVE USCITE</a></li>
                     <li><a href="https:/spotify.com"> SCOPRI</a></li>
-                   
+
                 </ul>
             </div>
+            <h2 class="single-color1">Recently played</h2>
+            <div class="row">
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6 txt-cent">
+                    <div class="cover">
+                        <img src="img/metal_lifting.jpg" alt="" />
+
+                    </div>
+
+                    <h5 class="white txt-cent ptb-05">Heavy Metal</h5>
+                    <div class="small-text txt-cent">Subtitle</div>
+
+                </div>
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6 ">
+                    <div class="cover">
+                        <img src="img/stranger.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">
+                        Stranger Things Vol. 1 <br>(a Netflix Original Series Soundtrack)
+                    </h5>
+                    <div class="small-text txt-cent">
+                        Kyle Dixion & Michaelin Stein
+                    </div>
+                </div>
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/aquietplace.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">A quiet place</h5>
+                    <div class="small-text txt-cent">Subtitle</div>
+                </div>
+
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/split.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">Split</h5>
+                    <div class="small-text txt-cent">Subtitle</div>
+                </div>
+
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/cure.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">A cure for Wellness</h5>
+                    <div class="small-text txt-cent">Subtitle</div>
+                </div>
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/sinister.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">Sinister</h5>
+                    <div class="small-text txt-cent">Subtitle</div>
+                </div>
+            </div>
+
+            <h2 class="white ">Creato per John Dae</h2>
+            <div class="small-text ptb-05 ">
+                Più ascolti, più accurati saranno i tuoi suggerimenti
+            </div>
+
+            <div class="row">
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/radar.jpeg" alt="" />
+                        <i class="fa-regular fa-circle-play play"></i>
+                    </div>
+                    <h5 class="white txt-central ptb-05">Release Radar</h5>
+                </div>
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img src="img/mixdaily.jpeg" alt="" />
+                        <i class="fa-regular fa-circle-play play"></i>
+                    </div>
+                    <h5 class="white txt-central ptb-05">Dally Mix 1</h5>
+                </div>
+            </div>
+
+
+
+
+
+
+
+            <h2 class="white">Artisti più popolari</h2>
+            <div class="small-text ptb-05">
+                Più ascolti, più accurati saranno i tuoi suggerimenti
+            </div>
+            <div class="row">
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img class="circle-img" src="img/youg.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">Lana del rey</h5>
+                </div>
+                <div class="col-xs-1-2 col-md-1-4 col-lg-1-6">
+                    <div class="cover">
+                        <img class="circle-img" src="img/einaudi.jpeg" alt="" />
+
+                    </div>
+                    <h5 class="white txt-cent ptb-05">Ludovico Einaudi</h5>
+                </div>
+            </div>
         </div>
+
 
     </div>
 
@@ -118,7 +227,7 @@
             <div>
                 <img class="img1" src="img/sinister.jpeg" alt="sinister">
             </div>
-            <div class="single-color" style="padding-left: 1rem;">
+            <div class="single-color" style="padding-left: .5rem;">
                 Sinister
                 <div style="color: gray;">Rihanna</div>
             </div>
