--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 </ul>
             </div>
-            <h2 class="single-color1">Recently played</h2>
+            <h2 class="single-color1 white">Recently played</h2>
             <div class="row">
                 <div class="col-xs-1-2 col-md-1-4 col-lg-1-6 txt-cent">
                     <div class="cover">
