--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
 
-            <h2 class="white ">Creato per John Dae</h2>
+            <h2 class="white ">Creato per John Doe</h2>
             <div class="small-text ptb-05 ">
                 Più ascolti, più accurati saranno i tuoi suggerimenti
             </div>
